--- a/.gitignore
+++ b/.gitignore
@@ -100,5 +100,8 @@ InitTestScene*.unity*
 
 # Auto-generated scenes by play mode tests
 /[Aa]ssets/[Ii]nit[Tt]est[Ss]cene*.unity*
+
+# Auto-add by Sourcegit
 .idea/
 Assets/Scripts/.vscode/
+*.ttf
